hotfixes previos a rediseño

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+documentacion/2020_Propuesta_Registro_Informacion_movilizacion.docx
+documentacion/diagrama registro 1.0.pdf
