hotfix para presentacion

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ yarn-error.log*
 
 documentacion/2020_Propuesta_Registro_Informacion_movilizacion.docx
 documentacion/diagrama registro 1.0.pdf
+documentacion/Examen SCI-100, SCI-200.docx
+documentacion/Examen S-190, S-130.docx
