--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ documentacion/2020_Propuesta_Registro_Informacion_movilizacion.docx
 documentacion/diagrama registro 1.0.pdf
 documentacion/Examen SCI-100, SCI-200.docx
 documentacion/Examen S-190, S-130.docx
+
+documentacion/Constancia de registro NO CUMPLE.docx
+documentacion/~$20_Propuesta_Registro_Informacion_movilizacion.docx
