git ignore documentacion

--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-documentacion/2020_Propuesta_Registro_Informacion_movilizacion.docx
-documentacion/diagrama registro 1.0.pdf
-documentacion/Examen SCI-100, SCI-200.docx
-documentacion/Examen S-190, S-130.docx
-
-documentacion/Constancia de registro NO CUMPLE.docx
-documentacion/~$20_Propuesta_Registro_Informacion_movilizacion.docx
+documentacion/*
