modificacion menor de logos

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SISECOIF",
+  "name": "Sistema de Selección de Combatientes de Incendios Forestales para Despliegues Internacionales",
   "icons": [
     {
       "src": "favicon.ico",
