--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pdf-viewer-reactjs": "^2.0.6",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
+    "react-beforeunload": "^2.2.1",
     "react-bootstrap": "^1.0.1",
     "react-countdown": "^2.2.1",
     "react-data-table-component": "^6.9.3",
